tests/compile_fail/inverse_nobool.stderr
error: `negated_arg` is incompatible with `field's type`.
 --> $DIR/inverse_nobool.rs:9:9
  |
9 |     pub value: f64,
  |         ^^^^^
